--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml dosyası, fly.io deployment yapılandırması
+# fly.toml app configuration file
 app = "medikalai"
-primary_region = "ams" # Amsterdam - istediğiniz bölgeyi seçebilirsiniz
+primary_region = "ams"
 
 [build]
-  builder = "paketobuildpacks/builder:base"
+  dockerfile = "Dockerfile"
 
 [env]
   PORT = "8080"
@@ -16,9 +16,10 @@ primary_region = "ams" # Amsterdam - istediğiniz bölgeyi seçebilirsiniz
   min_machines_running = 0
   processes = ["app"]
 
-[[statics]]
-  guest_path = "/app/static"
-  url_prefix = "/static"
+[[vm]]
+  memory = "512mb"
+  cpu_kind = "shared"
+  cpus = 1
 
 [mounts]
   source = "data"
