--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -1,11 +1,13 @@
-FROM python:3.9-slim
+FROM python:3.9
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
+# Gerekli dosyaları kopyala
 COPY . .
+
+# Bağımlılıkları doğrudan yükle - pip hatası olasılığını azaltmak için
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir flask requests PyPDF2 openai bcrypt Flask-WTF flask-jwt-extended gunicorn stripe
 
 # Volume dizini
 RUN mkdir -p /data
@@ -17,5 +19,5 @@ ENV HOST=0.0.0.0
 
 EXPOSE 8080
 
-# Uygulama başlat
-CMD python -c 'from app import init_db; init_db()' && gunicorn app:app --bind 0.0.0.0:8080 
+# Tek adımda çalıştır
+CMD ["sh", "-c", "python -c 'from app import init_db; init_db()' && gunicorn app:app --bind 0.0.0.0:8080 --timeout 120"] 
