--- a/fly.toml
+++ b/fly.toml
@@ -7,6 +7,7 @@ primary_region = "ams"
 
 [env]
   PORT = "8080"
+  HOST = "0.0.0.0"
 
 [http_service]
   internal_port = 8080
@@ -16,11 +17,31 @@ primary_region = "ams"
   min_machines_running = 0
   processes = ["app"]
 
-[[vm]]
-  memory = "512mb"
-  cpu_kind = "shared"
-  cpus = 1
+[http_service.concurrency]
+  type = "connections"
+  hard_limit = 25
+  soft_limit = 20
+
+# Daha toleranslı health check için
+[checks]
+  [checks.http_health]
+    grace_period = "120s"
+    interval = "30s"
+    method = "GET"
+    path = "/"
+    port = 8080
+    timeout = "10s"
+    type = "http"
+    restart_limit = 5
+
+[deploy]
+  release_command = "python -c 'from app import init_db; init_db()'"
 
 [mounts]
   source = "data"
-  destination = "/data" 
+  destination = "/data"
+
+[[vm]]
+  memory = "512mb"
+  cpu_kind = "shared"
+  cpus = 1 
