--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask
-requests
-PyPDF2
-openai
-bcrypt
-Flask-WTF
-flask-jwt-extended
-gunicorn
-stripe
+Flask==2.3.3
+requests==2.31.0
+PyPDF2==3.0.1
+openai==0.28.0
+bcrypt==4.0.1
+Flask-WTF==1.1.1
+flask-jwt-extended==4.5.2
+gunicorn==21.2.0
+stripe==6.0.0
