--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -2,8 +2,12 @@ FROM python:3.9
 
 WORKDIR /app
 
+# Önce template ve static dosyalarını kopyala
+COPY templates/ /app/templates/
+COPY static/ /app/static/
+
 # Gerekli dosyaları kopyala
-COPY . .
+COPY app.py requirements.txt ./
 
 # Bağımlılıkları doğrudan yükle - pip hatası olasılığını azaltmak için
 RUN pip install --no-cache-dir --upgrade pip && \
@@ -17,7 +21,13 @@ ENV DB_PATH=/data/kan_tahlil_app.db
 ENV PORT=8080
 ENV HOST=0.0.0.0
 
+# Debug modunu aktifleştir (geçici olarak)
+ENV FLASK_DEBUG=1
+
 EXPOSE 8080
+
+# Healthcheck ekle
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 CMD curl -f http://localhost:8080/login || exit 0
 
 # Tek adımda çalıştır
 CMD ["sh", "-c", "python -c 'from app import init_db; init_db()' && gunicorn app:app --bind 0.0.0.0:8080 --timeout 120"] 
