Update primary region in Fly configuration from Amsterdam to Frankfurt; adjust deployment settings

--- a/fly.toml
+++ b/fly.toml
@@ -1,6 +1,6 @@
 # fly.toml app configuration file
 app = "medikalai"
-primary_region = "ams"
+primary_region = "fra"  # Frankfurt, Almanya
 
 [build]
   dockerfile = "Dockerfile.simple"
