Update Fly configuration and Dockerfile; remove deprecated API region script and adjust logging

--- a/fly.toml
+++ b/fly.toml
@@ -1,6 +1,6 @@
 # fly.toml app configuration file
 app = "medikalai"
-primary_region = "ams"  # Amsterdam, Hollanda (önceki: fra - Frankfurt, Almanya)
+primary_region = "ams"  # Frankfurt, Almanya
 
 [build]
   dockerfile = "Dockerfile.simple"
