--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -2,6 +2,9 @@ FROM python:3.9
 
 WORKDIR /app
 
+# Curl paketini yükle - healthcheck için gerekli
+RUN apt-get update && apt-get install -y curl && apt-get clean && rm -rf /var/lib/apt/lists/*
+
 # Önce template ve static dosyalarını kopyala
 COPY templates/ /app/templates/
 COPY static/ /app/static/
@@ -21,12 +24,8 @@ ENV DB_PATH=/data/kan_tahlil_app.db
 ENV PORT=8080
 ENV HOST=0.0.0.0
 
-# Debug modunu aktifleştir (geçici olarak)
-ENV FLASK_DEBUG=1
-
-# API erişimi için bölge ayarları
-ENV API_REGION=global
-ENV API_USE_PROXY=false
+# Debug modunu kapalı tut (canlı ortam için)
+ENV FLASK_DEBUG=0
 
 EXPOSE 8080
 
