Update primary region in Fly configuration from Amsterdam to Ashburn, Virginia

--- a/fly.toml
+++ b/fly.toml
@@ -1,6 +1,6 @@
 # fly.toml app configuration file
 app = "medikalai"
-primary_region = "ams"  # Frankfurt, Almanya
+primary_region = "iad"  # IAD - Ashburn, Virginia (ABD)
 
 [build]
   dockerfile = "Dockerfile.simple"
