--- a/fly.toml
+++ b/fly.toml
@@ -1,49 +1,32 @@
-# fly.toml app configuration file
 app = "medikalai"
-primary_region = "ams"
+primary_region = "fra"
 
 [build]
   dockerfile = "Dockerfile.simple"
-
-[env]
-  PORT = "8080"
-  HOST = "0.0.0.0"
-  FLASK_APP = "app.py"
-  FLASK_ENV = "production"
-  FLASK_DEBUG = "0"  # Canlı ortamda debug kapalı olmalı
-  PYTHONUNBUFFERED = "1"  # Python çıktısını anında göndermek için
-  PYTHONDONTWRITEBYTECODE = "1"  # .pyc dosyalarını oluşturmamak için
 
 [http_service]
   internal_port = 8080
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 1  # En az bir makine her zaman çalışacak
+  min_machines_running = 0
   processes = ["app"]
 
+[env]
+  HOST = "0.0.0.0"
+  PORT = "8080"
+  FLASK_DEBUG = "0"
+
+[[mounts]]
+  source = "medikalai_data"
+  destination = "/data"
+  
 [http_service.concurrency]
   type = "connections"
   hard_limit = 25
   soft_limit = 20
 
-# Daha basit health check ayarı
-[checks]
-  [checks.alive]
-    type = "tcp"
-    interval = "15s"
-    timeout = "2s"
-    grace_period = "120s"
-
-[deploy]
-  release_command = "python -c 'from app import init_db; init_db()'"
-  strategy = "bluegreen"  # Immediate yerine bluegreen deployment stratejisi
-
-[mounts]
-  source = "data"
-  destination = "/data"
-
 [[vm]]
-  memory = "512mb"
   cpu_kind = "shared"
-  cpus = 1 
+  cpus = 1
+  memory_mb = 512 
