Update Fly configuration to add kill signal and timeout; enable auto rollback in experimental settings

--- a/fly.toml
+++ b/fly.toml
@@ -1,5 +1,10 @@
 app = "medikalai"
 primary_region = "fra"
+kill_signal = "SIGINT"
+kill_timeout = "5s"
+
+[experimental]
+  auto_rollback = true
 
 [build]
   dockerfile = "Dockerfile.simple"
