New Update : Create a 1.0 Versiyon new ui new backend

--- a/.env-example
+++ b/.env-example
@@ -1,12 +1,35 @@
-# API Anahtarları (Kendi API anahtarlarınızla değiştirin)
-STRIPE_API_KEY=sk_test_51XXXXXXXXXXXXXXXXXXXXXX
-STRIPE_PUBLIC_KEY=pk_test_51XXXXXXXXXXXXXXXXXXXXXX
-GEMINI_API_KEY=YOUR_GEMINI_API_KEY
+# ====================
+# MedikalAI Configuration
+# ====================
 
-# Uygulama Ayarları
-PORT=8080
-HOST=0.0.0.0
-DEBUG=False
+# Required: Google Gemini AI API Key
+# Get it from: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
 
-# Kopyalayıp .env olarak kaydedin ve gerçek değerlerinizi girin
-# NOT: Bu dosya örnek olarak verilmiştir, gerçek API anahtarlarınızı buraya yazmayın! 
+# Security Keys (Optional - auto-generated if not provided)
+SECRET_KEY=your_flask_secret_key_here
+JWT_SECRET_KEY=your_jwt_secret_key_here
+
+# Email Configuration (Optional)
+# Gmail App Password for notifications
+EMAIL_PASSWORD=your_gmail_app_password_here
+
+# Database Configuration (Optional)
+# Path to SQLite database file
+DB_PATH=kan_tahlil_app.db
+
+# Application Settings
+FLASK_ENV=development
+FLASK_DEBUG=true
+
+# Future Payment System Configuration
+# (Payment system will be implemented here)
+# PAYMENT_API_KEY=your_payment_api_key_here
+# PAYMENT_SECRET=your_payment_secret_here
+
+# ====================
+# Instructions:
+# 1. Copy this file to .env
+# 2. Fill in your actual API keys
+# 3. Never commit .env to git
+# ==================== 
